Client - on mobile, hide nav & show haburger. Mobile styling fixes.

--- a/client/src/app/HomePage.module.scss
+++ b/client/src/app/HomePage.module.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   padding: 80px 30px 60px;
 
-  @media screen and (min-width: 600px) {
+  @media screen and (max-width: 600px) {
     padding: 50px 20px;
   }
 }
