--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -36,8 +36,22 @@
   background-color: hsl(212, 100%, 48%);
   color: white;
   border: none;
+  height: 40.5px;
 }
 
+.show-on-mobile {
+  display: none;
+  @media screen and (max-width: 940px) {
+    display: flex;
+  }
+}
+
+.show-on-desktop {
+  display: block;
+  @media screen and (max-width: 940px) {
+    display: none;
+  }
+}
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
